change doc logo to English version

--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -57,6 +57,12 @@
     \section{Division of work}
     Rozdělení práce mezi členy týmu (uveďte kdo a jak se podílel na jednotlivých
     částech projektu; povinně zdůvodněte odchylky od rovnoměrného rozdělení bodů).
+    \begin{itemize}
+        \item \textbf{Matyáš Strelec:}
+        \item \textbf{Ondřej Seidl:}
+        \item \textbf{Maxmilián Nový:}
+        \item \textbf{Dominik Klon:}
+    \end{itemize}
 
     \section{Lexical analysis}
     Diagram konečného automatu, který specifikuje lexikální analyzátor.
